--- a/instructions/traffic_light_in_Scratch_NLD.html
+++ b/instructions/traffic_light_in_Scratch_NLD.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>Leren programmeren</title>
+<title>traffic_light_in_Scratch_NLD</title>
 
 
 <style type="text/css">
@@ -495,7 +495,7 @@ pre[class*="language-"] {
 
 <body>
 
-<h1 id="toc_0">Leren programmeren</h1>
+<h1 id="toc_0">Leren programmeren in Scratch op de Arduino</h1>
 
 <p><strong><em>Programmeer een verkeerslicht installatie op de Arduino</em></strong></p>
 
